--- a/cmd/like/Makefile
+++ b/cmd/like/Makefile
@@ -1,11 +1,11 @@
 gen_path = ../..
-package_name = followrpc
-service_name = followservice
+package_name = likerpc
+service_name = likeservice
 import_path = github.com/hh02/minimal-douyin
-idl_file = follow.proto
+idl_file = like.proto
 
 server:
 	rm -rf ./script ./build.sh ./handler.go ./main.go && kitex -module $(import_path) -I ../../idl/ -type protobuf -service $(service_name) -use $(import_path)/kitex_gen $(idl_file)
 
 client:
-	rm -rf $(gen_path)/kitex_gen/$(package_name) && cd $gen_path && kitex -module $(import_path) -I ./idl/ -type protobuf $(idl_file)
+	rm -rf $(gen_path)/kitex_gen/$(package_name) && cd $(gen_path) && kitex -module $(import_path) -I ./idl/ -type protobuf $(idl_file)
