finish follow service

--- a/cmd/follow/Makefile
+++ b/cmd/follow/Makefile
@@ -8,4 +8,4 @@ server:
 	rm -rf ./script ./build.sh ./handler.go ./main.go && kitex -module $(import_path) -I ../../idl/ -type protobuf -service $(service_name) -use $(import_path)/kitex_gen $(idl_file)
 
 client:
-	rm -rf $(gen_path)/kitex_gen/$(package_name) && cd $gen_path && kitex -module $(import_path) -I ./idl/ -type protobuf $(idl_file)
+	rm -rf $(gen_path)/kitex_gen/$(package_name) && cd $(gen_path) && kitex -module $(import_path) -I ./idl/ -type protobuf $(idl_file)
